# accounting-app-copilot-workshop-assignment

./: LICENSE  README.md  TESTPLAN.md  app.py  balance.json  constants.py  data.py  data_interface.py  exceptions.py  main.py  models.py  operations.py  pyproject.toml  requirements.txt  test_app.py  test_data.py  test_integration.py  test_operations.py  test_validators.py  ui.py  validators.py
images/: attribution.txt
static/: style.css
templates/: base.html  credit.html  debit.html  error.html  history.html  index.html  stats.html
