[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "accounting-system"
version = "1.0.0"
description = "Python translation of COBOL accounting system"
authors = [{name = "Accounting Team"}]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["."]
omit = ["test_*.py", "venv/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
precision = 2
show_missing = true

[tool.pylint.messages_control]
max-line-length = 88
disable = [
    "C0111",  # missing-docstring (we have docstrings where needed)
]

[tool.ruff]
line-length = 88
target-version = "py37"
select = ["E", "F", "W", "I", "N", "UP"]
